# CHAMOIS

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docker.yml  test.yml
autochem/: model.py
chamois/: __init__.py  _json.py  _meta.py  classyfire.py  compositions.py  model.py  ontology.py  orf.py
chamois/cli/: __init__.py  _common.py  _parser.py  _utils.py  annotate.py  compare.py  cv.py  cvi.py  cvsearch.py  explain.py  predict.py  render.py  screen.py  search.py  train.py  validate.py
chamois/domains/: __init__.py
chamois/predictor/: __init__.py  information.py  predictor.json
conch/: _json.py  _meta.py  classyfire.py  compositions.py  domains.py  model.py  ontology.py  orf.py  predictor.json  predictor.pkl  predictor.py  treematrix.py
conch/cli/: __init__.py  __main__.py  _common.py  _parser.py  annotate.py  cv.py  cvsearch.py  explain.py  predict.py  render.py  screen.py  search.py  train.py  validate.py
conch/domains/: .gitignore  __init__.py
conch/predictor/: __init__.py  information.py  predictor.json
data/: .gitignore
data/chemont/: ChemOnt_2_1.obo
data/datasets/: .gitignore
data/datasets/abc/: classes.hdf5  compounds.json  features.hdf5  kofam2023.hdf5  maccs.hdf5  mibig3.1_ani.hdf5  mibig_ani.hdf5  pfam35.hdf5  pgap11.hdf5  smcogs6.hdf5
data/datasets/mibig/: classes.hdf5  features.hdf5
data/datasets/mibig2.0/: ani.hdf5  classes.hdf5  compounds.json  features.hdf5  kofam2023.hdf5  maccs.hdf5  mibig3.1_ani.hdf5  pfam35.hdf5  pgap11.hdf5  smcogs6.hdf5  taxonomy.tsv  types.tsv
data/datasets/mibig3.1/: ani.hdf5  classes.hdf5  classes.npclassifier.hdf5  compounds.json  features.hdf5  kofam2023.hdf5  maccs.hdf5  mibig3.1_ani.hdf5  pfam35.hdf5  pgap11.hdf5  smcogs6.hdf5  taxonomy.tsv  types.tsv
data/datasets/mibig4.0/: classes.hdf5  classes.npclassifier.hdf5  compounds.json  features.hdf5  taxonomy.tsv  types.tsv
data/datasets/native/: classes.hdf5  classes.npclassifier.hdf5  compounds.json  coordinates.tsv  features.hdf5  types.tsv
data/datasets/nuccore/: classes.hdf5  compounds.json  features.hdf5
data/datasets/nuccore-lite/: classes.hdf5  compounds.json  coordinates.tsv  features.hdf5
data/datasets/prism4/: classes.hdf5  features.hdf5
data/mibig/: ani_3.1.coo.npz  blocklist.tsv
data/scripts/common/: make_aci.py  make_ani.py  make_classes.py  make_npclassifier.py
data/scripts/kofam/: set_thresholds.py
data/scripts/mibig/: download_compounds.py  download_records.py  download_taxonomy.py  extract_types.py
data/scripts/mite/: download_entries.py  download_peptides.py  make_classes.py  make_features.py
data/scripts/native/: download_clusters.py  download_genomes.py
data/scripts/npatlas/: make_classes.py  make_maccs.py
data/scripts/nuccore/: download_clusters.py  search_records.py
data/scripts/pfam/: interpro_json.py
data/scripts/prism4/: extract_compounds.py  extract_records.py
data/scripts/smcogs/: download.py
data/testset/abc/: download_clusters.py  download_genomes.py
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/_static/html/figures/: cv.html  (+1 more)
docs/api/: index.rst
docs/api/classyfire/: cache.rst  classification.rst  client.rst  index.rst  query.rst  term.rst  utils.rst
docs/api/compositions/: compositions.rst  index.rst
docs/api/domains/: domain_annotator.rst  index.rst
docs/api/model/: cluster_sequence.rst  domain.rst  index.rst  protein.rst
docs/api/ontology/: adjacency.rst  index.rst  ontology.rst
docs/api/orf/: index.rst  orf_finder.rst  warnings.rst
docs/api/predictor/: index.rst  information.rst  predictor.rst
docs/cli/: annotate.rst  compare.rst  cv.rst  cvi.rst  explain.rst  index.rst  predict.rst  render.rst  screen.rst  search.rst  train.rst  validate.rst
docs/examples/: basic.ipynb  explain.ipynb  index.rst
docs/figures/: cv.rst  index.rst  network.rst
docs/guide/: copyright.rst  index.rst  install.rst  publications.rst
docs/guide/figures/: cv.rst  network.rst
misc/paper/fig2_cross_validation/: barplot_topk.py  cvtree_auprc.html  folds_statistics.py  prcurves.py  tree.py
misc/paper/fig3_network/: .gitignore  biosynthetic_bigslice_domains.tsv  graph.html  plot.py  spec.vega.json
misc/paper/fig4_screen_evaluation/: chem_class_map.tsv  dotplot_merged.py  merge_predictions.py  pca_plot.py
misc/paper/sup_fig1_dataset_description/: plot.py
misc/paper/sup_fig1_imbalance/: plot.py
misc/paper/sup_fig2_prism4/: plot.py
misc/paper/sup_fig3_dataset_description/: plot.py
misc/paper/sup_fig3_prism4/: .gitignore  plot.py
misc/paper/sup_fig3_rf_comparison/: plot.py
misc/paper/sup_fig4_weights/: plot.py
misc/paper/sup_fig5_prism4/: map_npatlas.py  plot.py
misc/paper/sup_fig6_npclassifier_cv/: tree.py
misc/paper/sup_fig7_bgcat_benchmark/: plot.py
misc/paper/sup_table10_benchmark_summary/: summary.py
misc/paper/sup_table1_cv_report/: make_report.py
misc/paper/sup_table2_weights/: extract.py
misc/paper/sup_table3_domains/: table.py
misc/paper/sup_table4_domains/: list_no_annotations.py  table.py
misc/paper/sup_table5_benchmark_dataset/: collate.py
misc/paper/sup_table5_prism4/: collate_predictions.py  functions.py  summary_table.py
pkg/docker/: Dockerfile
pkg/singularity/: chamois.def
src/: build_predictors.py  classify_compounds.py  compute_ani_matrix.py  evaluate_crf.py  evaluate_feature_sets.py  evaluate_predictors.py  extract_proteins.py  make_ani.py  make_classes.py  make_compositions.py  make_features.py  make_identity.py  make_maccs.py  map_compounds.py  train_predictors.py
src/abc/: download_clusters.py  download_compounds.py  download_genomes.py  download_records.py
src/mibig/: download_compounds.py  download_records.py  download_taxonomy.py
src/npatlas/: make_classes.py  make_maccs.py
src/smcogs/: download.py
tests/: test_domains.py  test_orf.py  test_predictor.py  utils.py
tests/data/: AB746937.1.gbk  BGC0000703.4.gbk
tests/test_cli/: test_annotate.py  test_predict.py
(+11 files in other folders)
