[build-system]
requires = [
    'setuptools >=75.0', 
    'pyhmmer ~=0.12.0', 
    "zstandard ~=0.25 ; python_version < '3.14'",
]
build-backend = "setuptools.build_meta"

[project]
name = "chamois-tool"
dynamic = ["version"]
description = "Chemical HierArchy for secondary Metabolism clusters Obtained In Silico"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
authors = [
  { name = "Martin Larralde", email = "martin.larralde@embl.de" },
]
keywords = ["bioinformatics", "metabolism", "gene cluster", "bgc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    "anndata >=0.8,<0.13",
    "gb-io ~=0.3.1",
    "importlib-resources >=1.0     ; python_version < '3.9'",
    "zstandard ~=0.25              ; python_version < '3.14'",
    "numpy >=1.0,<3.0",
    "pandas >=1.3,<3.0",
    "platformdirs >=3.0,<5.0",
    "pyhmmer ~=0.12.0",
    "pyrodigal ~=3.0",
    "rich >=12.4.0",
    "rich-argparse ~=1.1",
    "scipy ~=1.4",
]

[project.optional-dependencies]
train = [
    "scikit-learn ~=1.0",
    "kennard-stone ~=2.1",
]
compare = [
    "rdkit >=2023.3",
]

[project.scripts]
chamois = "chamois.cli:run"

[project.urls]
"Repository" = "https://github.com/zellerlab/CHAMOIS"
"Bug Tracker" = "https://github.com/zellerlab/CHAMOIS/issues"
"Changelog" = "https://github.com/zellerlab/CHAMOIS/blob/main/CHANGELOG.md"
"Preprint" = "https://www.biorxiv.org/content/10.1101/2025.03.13.642868"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"chamois" = ["py.typed"]
"chamois.predictor" = ["predictor.json"]

[tool.setuptools.packages.find]
namespaces = true
include = ["chamois", "chamois.domains", "chamois.cli", "chamois.predictor"]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "chamois.__version__"}

[tool.pydocstyle]
inherit = false
ignore = ["D100", "D101", "D102", "D105", "D107", "D200", "D203", "D213", "D406", "D407"]
match-dir = "(?!tests)(?!resources)(?!docs)(?!build)[^\\.].*"
match = "(?!test)(?!setup)[^\\._].*\\.py"

[tool.mypy]
ignore_missing_imports = true
