[metadata]
name = conch
version = attr: conch.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://git.embl.de/larralde/CONCH
description = Classification Of Natural product Chemical Hierarchy for Biosynthetic Gene Clusters.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platform = any
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: POSIX
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering :: Bio-Informatics
  Typing :: Typed
project_urls =
  Repository = https://git.embl.de/larralde/CONCH

[options]
zip_safe = true
packages = 
  conch
  conch.cli
  conch.domains
include_package_data = true
python_requires = >=3.7
setup_requires =
  pyhmmer ~=0.10.0
  lz4 ~=4.0
  setuptools >=39.2
  rich >=12.4.0
  wheel >=0.30
install_requires =
  anndata ~=0.9
  docopt ~=0.6.2
  gb-io ~=0.2
  importlib-resources >=1.0     ; python_version < '3.9'
  lz4 ~=4.0
  nrpys ~=0.1
  numpy ~=1.16
  pandas ~=1.4
  pyhmmer ~=0.10.0
  pyrodigal ~=3.0
  rich >=12.4.0
  rich-argparse ~=1.1
  scipy ~=1.4

[options.extras_require]
train =
  scikit-learn ~=1.0
  kennard-stone ~=2.1
screen =
  rdkit >=2023.3

[options.packages.find]
include =
  conch
  conch.domains

[options.package_data]
conch = py.typed

[options.entry_points]
console_scripts =
  conch = conch.cli:run

[bdist_wheel]
universal = true

[coverage:report]
include = conch/*
show_missing = true
exclude_lines =
  pragma: no cover
  if typing.TYPE_CHECKING:
  @abc.abstractmethod
  @abc.abstractproperty
  raise NotImplementedError
  return NotImplemented

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D402, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
ignore = D200, D203, D213, D406, D407, Q000  # Google conventions
exclude =
  .git
  .eggs
  ci/
  scripts/
  notebook/
  tests/
  docs/
  */build/
  */setup.py

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
