[metadata]
name = chamois-tool
version = attr: chamois.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/zellerlab/CHAMOIS
description = Chemical Hierarchy Approximation for secondary Metabolism clusters Obtained In Silico.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
platform = any
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: POSIX
  Programming Language :: Python :: 3 :: Only
  Topic :: Scientific/Engineering :: Bio-Informatics
  Typing :: Typed
project_urls =
  Repository = https://github.com/zellerlab/CHAMOIS
  Bug Tracker = https://github.com/zellerlab/CHAMOIS/issues
  Changelog = https://github.com/zellerlab/CHAMOIS/blob/main/CHANGELOG.md
  Preprint = https://www.biorxiv.org/content/10.1101/2025.03.13.642868

[options]
zip_safe = true
packages =
  chamois
  chamois.cli
  chamois.domains
  chamois.predictor
include_package_data = true
python_requires = >=3.7
setup_requires =
  setuptools >=39.2
  wheel >=0.30
install_requires =
  anndata >=0.8,<0.12
  gb-io ~=0.3.1
  importlib-resources >=1.0     ; python_version < '3.9'
  lz4 ~=4.0
  numpy >=1.0,<3.0
  pandas >=1.3,<3.0
  platformdirs >=3.0,<5.0
  pyhmmer ~=0.11.0
  pyrodigal ~=3.0
  rich >=12.4.0
  rich-argparse ~=1.1
  scipy ~=1.4

[options.extras_require]
train =
  scikit-learn ~=1.0
  kennard-stone ~=2.1
screen =
  rdkit >=2023.3

[options.packages.find]
include =
  chamois
  chamois.cli
  chamois.domains
  chamois.predictor

[options.package_data]
chamois = py.typed
chamois.predictor = predictor.json

[options.entry_points]
console_scripts =
  chamois = chamois.cli:run

[coverage:report]
include = chamois/*
show_missing = true
exclude_lines =
  pragma: no cover
  if typing.TYPE_CHECKING:
  @abc.abstractmethod
  @abc.abstractproperty
  raise NotImplementedError
  return NotImplemented

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D402, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
ignore = D200, D203, D213, D406, D407, Q000  # Google conventions
exclude =
  .git
  .eggs
  ci/
  scripts/
  notebook/
  tests/
  docs/
  */build/
  */setup.py

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
